tests/negative/gold/escape_test.gold
tests/negative/escape_test.toit:7:3: error: Unexpected <illegal>
  \ 
  ^
tests/negative/escape_test.toit:4:3: error: Invalid string: '\h'

  "\h"
  ^~~~
tests/negative/escape_test.toit:5:3: error: Invalid string: '\s'

  "\s"
  ^~~~
Compilation failed.
